upgrade to java17 and add new entity